--- a/views/admin/_partial/problem.ejs
+++ b/views/admin/_partial/problem.ejs
@@ -36,7 +36,7 @@
 
 <form action="<%= site.url_for('admin/update/problem/' + pid) %>" method="post" class="pure-form pure-form-stacked">
     <fieldset>
-    <div class="pure-g">
+        <div class="pure-g">
             <div class="pure-u-1-1">
                <legend>Problem Config</legend>
 
@@ -52,9 +52,13 @@
                             <option value="0" <%- prob_config.config.pub == 0 ? "selected" : "" %> > <%= __('Private') %> </option>
                         </select>
                     </div>
-                    <div class="pure-u-1-1">
+                    <div class="pure-u-4-5">
                         <label for="ttl"><%= __('Problem Title') %></label>
-                        <input type="text" name="ttl" id="ttl" class="pure-input-1" value="<%= prob_config.config.ttl %>">
+                        <input class="pure-u-23-24" type="text" name="ttl" id="ttl" class="pure-input-1" value="<%= prob_config.config.ttl %>">
+                    </div>
+                    <div class="pure-u-1-5">
+                        <label for="cyclomatic_complexity"><%= __('Cyclomatic Complexity') %></label>
+                        <input class="pure-u-21-24" type="text" name="cyclomatic_complexity" id="cyclomatic_complexity" class="pure-input-1" value="<%= prob_config.config.standard_cyclomatic_complexity %>">
                     </div>
                 </div>
             </div>
@@ -73,7 +77,7 @@
                     </div>
                     <div class="pure-u-1-3">
                         <label for="porder"><%= __('Dependency') %></label>
-                        <% 
+                        <%
                             var depend_arr = [];
                             for (var i in prob_config.dependency) {
                                 depend_arr.push(prob_config.dependency[i].depend_pid);
@@ -123,7 +127,7 @@
 
         <div class="pure-g">
             <div class="pure-u-1-1">
-                
+
             </div>
         </div>
     </fieldset>
