--- a/views/_partial/_widget/submission_table.ejs
+++ b/views/_partial/_widget/submission_table.ejs
@@ -81,7 +81,7 @@
 						verdictCol += ' <i class="fa fa-spinner fa-pulse"></i>';
 
                     // add rejudge button for administor
-					if (user.uid && (user.uid == sl[i].uid || user["class"] === null)) {
+					if (user.uid && user["class"] === null) {
 						verdictCol += ' <a class="pid-rejudge" href="' + site.url_for('/admin/api/rejudge?pid=') + sl[i].pid + '&sid=' + sl[i].sid + '" style="color: #b6c17b;" title="rejudge"><i class="fa fa-refresh"></i></a>';
 					}
 					verdictCol += '</td>';
