--- a/views/admin/_partial/grade.ejs
+++ b/views/admin/_partial/grade.ejs
@@ -44,7 +44,7 @@
 	</tr>
 	</thead>
 	<tbody>
-<% 
+<%
 	var record = {};
 	for (var i = 0; userlst && i < userlst.length; i++) {
 		record[userlst[i].lgn] = {};
@@ -70,12 +70,14 @@
 				<table class="pure-table" style='width: 100%;'>
 				<tbody>
 				<tr>
-				<% 
-					for (var j = 0; j < thead.length; j++) { 
-						var s = (record[i][thead[j].eid] !== undefined || record[i][thead[j].eid] === 0) ? Math.ceil(record[i][thead[j].eid]) : '-1';
+				<%
+					for (var j = 0; j < thead.length; j++) {
+                        let score = record[i][thead[j].eid];
+                        if (score === undefined)
+                            score = -1;
 				%>
 						<td>
-							 <input type="text" name="<%- thead[j].eid %>" class="pure-u-23-24" value="<%- s %>">
+							 <input type="text" name="<%- thead[j].eid %>" class="pure-u-23-24" value="<%- score %>">
 						</td>
 				<% } %>
 					<td>
@@ -86,7 +88,7 @@
 				</table>
 		    </fieldset>
 			</form>
-		</td>		
+		</td>
 	</tr>
 <% } %>
 	</tbody>
