--- a/views/_partial/_contest/scoreboard.ejs
+++ b/views/_partial/_contest/scoreboard.ejs
@@ -14,27 +14,30 @@
             let problemNumber = table_config.header.length;
             let enableSummary = table_config.summaryChartData !== null;
             if (enableSummary) {
-                var summaryChartDataJson = JSON.stringify(table_config.summaryChartData);
         %>
                 <div class="pure-u-1-1"><div id="bar-progress-summary"></div></div>
                 <div class="pure-u-1-1"><h4 style='text-align: center;'>Total Score</h4></div>
         <% } %>
-		<% for (var ri = 0; ri < (problemNumber + 1)/2; ri++) { %>
+		<%
+            let problemScoreDistribution = table_config.problemScoreDistribution;
+            for (let row = 0; row < (problemNumber + 1)/2; row++) {
+        %>
 			<%
-				var l = ri*2, r = ri*2 +2;
-				var i;
+                let chartI = row * 2;
+                if (chartI != problemNumber - 1) {
+                    // not the last row of odds items
 			%>
-			<% for (i = l; i < problemNumber && i < r; i++) { %>
-				<div class="pure-u-1-2"><div id="bar-progress<%= i %>"></div></div>
-			<% } %>
-			<% for (; i < r; i++) { %>
-				<div class="pure-u-1-2"></div>
-			<% } %>
-			<% for (i = l; i < problemNumber && i < r; i++) { %>
-				<div class="pure-u-1-2"><h4 style='text-align: center;'><%- table_config.header[i].ttl %></h4></div>
-			<% } %>
-			<% for (; i < r; i++) { %>
-				<div class="pure-u-1-2"></div>
+                    <div class="pure-u-1-2"><div id="bar-progress<%= chartI %>"></div></div>
+                    <div class="pure-u-1-2"><div id="bar-progress<%= chartI + 1 %>"></div></div>
+                    <div class="pure-u-1-2"><h4 style='text-align: center;'><%- problemScoreDistribution[chartI].title %></h4></div>
+                    <div class="pure-u-1-2"><h4 style='text-align: center;'><%- problemScoreDistribution[chartI + 1].title %></h4></div>
+			<%
+                } else {
+			%>
+                    <div class="pure-u-1-2"><div id="bar-progress<%= chartI %>"></div></div>
+                    <div class="pure-u-1-2"></div>
+                    <div class="pure-u-1-2"><h4 style='text-align: center;'><%- problemScoreDistribution[chartI].title %></h4></div>
+                    <div class="pure-u-1-2"></div>
 			<% } %>
 		<% } %>
 	</div>
@@ -42,96 +45,88 @@
 		<thead>
 			<tr>
 				<th style="width: 15%;">Score</th>
-				<% var width = 85 / Math.max(problemNumber, 1); %>
-				<% for (var row = 0; row < problemNumber; row++) { %>
-					<th style="width:<%- width %>%"><a href="<%= site.url_for('problem/' + table_config.cid + '/' + table_config.header[row].pid) %>"><%- table_config.header[row].pid %>. <%- table_config.header[row].ttl %></a></th>
-				<% } %>
+                <%
+                    var width = 85 / Math.max(problemNumber, 1);
+                    let problemScoreTable = table_config.scoreTable;
+                    for (let col = 0; col < problemScoreTable.tableCols.length; col++) {
+                        let pid = problemScoreTable.tableCols[col].pid;
+                        let title = problemScoreTable.tableCols[col].title;
+                %>
+                    <th style="width:<%- width %>%"><a href="<%= site.url_for('problem/' + table_config.cid + '/' + pid) %>"><%= pid %>. <%- title %></a></th>
+                <% } %>
 			</tr>
 		</thead>
 		<tbody>
-			<% if (table_config.scorekind == undefined || table_config.scorekind == null || table_config.scorekind.length == 0 || table_config.scorekind[0].max_res != 100) { %>
-			<tr class="normal">
-				<th>100</th>
-				<% for (var col = 0; col < problemNumber; col++) { %>
-					<td>0</td>
-				<% } %>
-			</tr>
-			<% } %>
 			<%
 				var alluser = {};
-				var chart_json = [];
-				var probuser = {};
-				var score_sum = 0;
 				for (var i = 0; i < table_config.user.length; i++)
 					alluser[table_config.user[i].uid] = 0;
-				for (var i = 0; i < problemNumber; i++) {
-					probuser[i] = 0;
-					chart_json.push('');
-				}
 			 %>
 			<% for (var row = 0; row < table_config.scorekind.length; row++) { %>
 			<tr class="normal">
 				<td><%- table_config.scorekind[row].max_res %></td>
-				<% for (var col = 0; col < problemNumber; col++) { %>
+				<% for (let col = 0; col < problemNumber; col++) { %>
 					<%
-						var counter = 0;
-						var chart = '';
 						for (var i = 0; i < table_config.stats.length; i++) {
-							counter += table_config.stats[i].pid == table_config.header[col].pid
-									&& table_config.stats[i]['MAX(scr)'] == table_config.scorekind[row].max_res;
 							alluser[table_config.stats[i].uid] = 0;
 						}
-						probuser[col] = probuser[col] + counter;
-						score_sum += counter * table_config.scorekind[row].max_res;
-						chart_json[col] += '{ score: ' + table_config.scorekind[row].max_res + ', user: ' + counter + '},'
 					%>
-					<td><%- counter %></td>
+					<td><%= problemScoreTable['tableCols'][col]['scoreList'][row] %></td>
 				<% } %>
 			</tr>
 			<% } %>
 			<tr class="normal">
 				<td>#NoSubmission</td>
-				<%
-					var alluser_size = 0;
-					for (var key in alluser)
-						alluser_size++;
-				 %>
-				<% for (var i = 0; i < problemNumber; i++) { %>
-					<td><%- alluser_size-probuser[i] %></td>
+				<% for (var col = 0; col < problemNumber; col++) { %>
+					<td><%= problemScoreTable['tableCols'][col]['noSubmit'] %></td>
 				<% } %>
 			</tr>
+            <tr class="normal">
+				<td>Average</td>
+                <% for (let col = 0; col < problemNumber; col++) { %>
+                    <td><%- (problemScoreTable['tableCols'][col].average).toFixed(2) %></td>
+                <% } %>
+            </tr>
 			<tr class="normal">
 				<td>#User</td>
-				<td colspan='<%- problemNumber %>'><%- alluser_size %></td>
+				<td colspan='<%- problemNumber %>'><%- problemScoreTable.totalUser %></td>
 			</tr>
-			<tr class="normal">
-				<td>Avg. score</td>
-				<td colspan='<%- problemNumber %>'><%- (score_sum / alluser_size / problemNumber).toFixed(2) %></td>
-			</tr>
+            <% if (problemNumber > 1) { %>
+                <tr class="normal">
+                    <td>Avg. score</td>
+                    <td colspan='<%- problemNumber %>'><%- (problemScoreTable.totalAverage).toFixed(2) %></td>
+                </tr>
+            <% } %>
 		</tbody>
 	</table>
 	<script>
-		<% for (var i = 0; i < problemNumber; i++) { %>
-			Morris.Bar({
-			  element: 'bar-progress<%- i %>',
-			  data: [<%- chart_json[i] %>].reverse(),
-			  xkey: 'score',
-			  ykeys: ['user'],
-			  labels: ['#users'],
-			  yLabelFormat: function(y){return y != Math.round(y)?'':y;} // hide non interger label
-			});
+		<%
+            for (var i = 0; i < problemNumber; i++) {
+                data = JSON.stringify(problemScoreDistribution[i].chartData);
+        %>
+                Morris.Bar({
+                  element: 'bar-progress<%- i %>',
+                  data: <%- data %>,
+                  xkey: 'score',
+                  ykeys: ['user'],
+                  labels: ['#users'],
+                  yLabelFormat: function(y){return y != Math.round(y)?'':y;} // hide non interger label
+                });
 		<% } %>
 
-        <% if (enableSummary) { %>
-            Morris.Bar({
-              element: 'bar-progress-summary',
-              data: <%- summaryChartDataJson %>,
-              xkey: 'score',
-              ykeys: ['user'],
-              labels: ['#users'],
-              yLabelFormat: function(y){return y != Math.round(y)?'':y;},
-              barColors: ['CadetBlue']
-            });
+        <%
+            if (enableSummary) {
+                let summaryChartDataJson = JSON.stringify(table_config.summaryChartData);
+        %>
+                Morris.Bar({
+                  element: 'bar-progress-summary',
+                  data: <%- summaryChartDataJson %>,
+                  xkey: 'score',
+                  ykeys: ['user'],
+                  labels: ['#users'],
+                  yLabelFormat: function(y){return y != Math.round(y)?'':y;},
+                  barColors: ['CadetBlue']
+                });
         <% } %>
 	</script>
 	<% if (user["uid"] >= 0 && user["class"] == null) { %>
