fix the wrong row number in score distribution of scoreboard

--- a/views/_partial/_contest/scoreboard.ejs
+++ b/views/_partial/_contest/scoreboard.ejs
@@ -20,7 +20,7 @@
         <% } %>
 		<%
             let problemScoreDistribution = table_config.problemScoreDistribution;
-            for (let row = 0; row < (problemNumber + 1)/2; row++) {
+            for (let row = 0; row < problemNumber / 2; row++) {
         %>
 			<%
                 let chartI = row * 2;
