--- a/views/_partial/_user/solved_list.ejs
+++ b/views/_partial/_user/solved_list.ejs
@@ -1,5 +1,5 @@
 <div class="header">
-    <h1 class='article-title'>Solved List</h1>
+    <h1 class='article-title'><i class="fa fa-check-square-o" aria-hidden="true"></i> Solved List</h1>
 </div>
 <div class="content">
     <h3><%= lgn %>'s Solved List</h3>
@@ -8,8 +8,8 @@
             <table class="pure-table pure-table-bordered" sytle="width: 100%">
                 <thead>
                     <tr>
-                        <th>Problem ID</th>
-                        <th>Problem Title</th>
+                        <th><i class="fa fa-list-alt" aria-hidden="true"></i> Problem ID</th>
+                        <th><i class="fa fa-gavel" aria-hidden="true"></i> Problem Title</th>
                     </tr>
                 </thead>
                 <tbody>
