host Morris component

--- a/views/_partial/_contest/scoreboard.ejs
+++ b/views/_partial/_contest/scoreboard.ejs
@@ -1,8 +1,8 @@
 <meta http-equiv="refresh" content="30" />
 
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.css">
-<script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
-<script src="//cdnjs.cloudflare.com/ajax/libs/morris.js/0.5.1/morris.min.js"></script>
+<link rel="stylesheet" href="<%= site.url_for('stylesheets/morris/morris.css') %>">
+<script src="<%= site.url_for('stylesheets/morris/raphael-min.js') %>"></script>
+<script src="<%= site.url_for('stylesheets/morris/morris.min.js') %>"></script>
 
 <div class="header">
 	<h1 class='article-title'>Scoreboard</h1>
